--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Paul Bokelman's Website
-description: My personal corner of the internet!
+title: Paul Bokelman
+description: Hey this is my github hosted personal corner of the internet. Stay as long as you want.
